// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Button Button Colors 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-guhh2k-Button"
        data-testid="button"
        disabled={true}
      >
        <span
          className="css-1xr6sam-Button"
        >
          Disabled
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-18ow94r-Button"
        data-testid="button"
        disabled={false}
      >
        <span
          className="css-1xr6sam-Button"
        >
          Red 600
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-17gv3xz-Button"
        data-testid="button"
        disabled={false}
      >
        <span
          className="css-1xr6sam-Button"
        >
          Magenta 200
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button Button Sizes 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-gajiax-Button"
        data-testid="button"
        disabled={false}
      >
        <span
          className="css-1xr6sam-Button"
        >
          Hello world
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-199vak6-Button"
        data-testid="button"
        disabled={false}
      >
        <span
          className="css-1xr6sam-Button"
        >
          Hello world
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-isvu07-Button"
        data-testid="button"
        disabled={false}
      >
        <span
          className="css-1xr6sam-Button"
        >
          Hello world
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button Button Types 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-n6xd71-Button"
        data-testid="button"
        disabled={true}
      >
        <span
          className="css-1xr6sam-Button"
        >
          Disabled
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-41v6xr-Button"
        data-testid="button"
        disabled={false}
      >
        <span
          className="css-1xr6sam-Button"
        >
          Hello world
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-cbt92p-Button"
        data-testid="button"
        disabled={false}
      >
        <span
          className="css-1xr6sam-Button"
        >
          Hello world
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-isvu07-Button"
        data-testid="button"
        disabled={false}
      >
        <span
          className="css-1xr6sam-Button"
        >
          Hello world
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-3r514x-Button"
        data-testid="button"
        disabled={false}
      >
        <span
          className="css-1xr6sam-Button"
        >
          Hello world
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button Button with icon 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-gajiax-Button"
        data-testid="button"
        disabled={false}
      >
        <span
          className="css-1xr6sam-Button"
        >
          <span
            className="css-1rxmeo4-Button"
          >
            <img
              height="16"
              src="https://brandmark.io/logo-rank/random/pepsi.png"
              width="16"
            />
          </span>
          Hello world
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-gajiax-Button"
        data-testid="button"
        disabled={false}
      >
        <span
          className="css-1xr6sam-Button"
        >
          Hello world
          <span
            className="css-18427g8-Button"
          >
            <img
              height="16"
              src="https://brandmark.io/logo-rank/random/pepsi.png"
              width="16"
            />
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-gajiax-Button"
        data-testid="button"
        disabled={false}
      >
        <span
          className="css-1xr6sam-Button"
        >
          <span
            className="css-ozs6eh-Button"
          >
            <img
              height="16"
              src="https://brandmark.io/logo-rank/random/pepsi.png"
              width="16"
            />
          </span>
          Hello world
          <span
            className="css-ozs6eh-Button"
          >
            <img
              height="16"
              src="https://brandmark.io/logo-rank/random/pepsi.png"
              width="16"
            />
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button Dynamic Button Props 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <button
    className="css-dosqfx-Button"
    data-testid="button"
    disabled={false}
  >
    <span
      className="css-1xr6sam-Button"
    >
      change me!
    </span>
  </button>
</div>
`;

exports[`Storyshots Design System/Button Icon Button Sizes 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-gajiax-Button"
        data-testid="button-size-lg"
        disabled={false}
      >
        <span
          className="css-1xr6sam-Button"
        >
          <span
            className="css-1rxmeo4-Button"
          >
            <img
              height="16"
              src="https://brandmark.io/logo-rank/random/pepsi.png"
              width="16"
            />
          </span>
          Hello world
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-199vak6-Button"
        data-testid="button-size-md"
        disabled={false}
      >
        <span
          className="css-1xr6sam-Button"
        >
          <span
            className="css-1rxmeo4-Button"
          >
            <img
              height="16"
              src="https://brandmark.io/logo-rank/random/pepsi.png"
              width="16"
            />
          </span>
          Hello world
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-isvu07-Button"
        data-testid="button-size-sm"
        disabled={false}
      >
        <span
          className="css-1xr6sam-Button"
        >
          <span
            className="css-1rxmeo4-Button"
          >
            <img
              height="16"
              src="https://brandmark.io/logo-rank/random/pepsi.png"
              width="16"
            />
          </span>
          Hello world
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button Non Filled Button 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <button
    className="css-123k3g3-Button"
    data-testid="button"
    disabled={false}
  >
    <span
      className="css-1xr6sam-Button"
    >
      Hello world
    </span>
  </button>
</div>
`;

exports[`Storyshots Design System/Button Regular Button 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <button
    className="css-gajiax-Button"
    data-testid="button"
    disabled={false}
  >
    <span
      className="css-1xr6sam-Button"
    >
      Hello world
    </span>
  </button>
</div>
`;
